--- a/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb
+++ b/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        " ('Soya', 3.5)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "[0, 0, 0, 0, 4, 3]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,10 +135,10 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[1;32md:\\vanmindX\\CSI_09\\HDT-CSI04\\Labs\\Lab07\\Students\\truongvan_lab07\\truongvan_lab07.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39m# !!! DO NOT MODIFY THIS CELL\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39m# Check result on test cases\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=2'>3</a>\u001b[0m test1(counting_sort_rating)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11124\\1033557906.py:23\u001b[0m, in \u001b[0;36mtest1\u001b[1;34m(func)\u001b[0m\n\u001b[0;32m     20\u001b[0m     arr \u001b[39m=\u001b[39m [(\u001b[39mstr\u001b[39m(i), ratings[i]\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[0;32m     21\u001b[0m     \u001b[39mreturn\u001b[39;00m func(arr)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 23\u001b[0m test(test_cases, func, condition_func)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11124\\245556452.py:11\u001b[0m, in \u001b[0;36mtest\u001b[1;34m(cases, test_func, condition_func)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i, case \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(cases):\n\u001b[0;32m     10\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 11\u001b[0m         passed \u001b[39m=\u001b[39m condition_func(test_func, case)\n\u001b[0;32m     12\u001b[0m         \u001b[39mif\u001b[39;00m passed:\n\u001b[0;32m     13\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m- Test \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m PASSED.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11124\\1033557906.py:21\u001b[0m, in \u001b[0;36mtest1.<locals>.condition_func\u001b[1;34m(func, case)\u001b[0m\n\u001b[0;32m     19\u001b[0m ratings \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m11\u001b[39m, case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     20\u001b[0m arr \u001b[39m=\u001b[39m [(\u001b[39mstr\u001b[39m(i), ratings[i]\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[1;32m---> 21\u001b[0m \u001b[39mreturn\u001b[39;00m func(arr)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[1;32md:\\vanmindX\\CSI_09\\HDT-CSI04\\Labs\\Lab07\\Students\\truongvan_lab07\\truongvan_lab07.ipynb Cell 6\u001b[0m in \u001b[0;36mcounting_sort_rating\u001b[1;34m(arr)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(arr)):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=3'>4</a>\u001b[0m   j \u001b[39m=\u001b[39m i\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=4'>5</a>\u001b[0m   \u001b[39mwhile\u001b[39;00m j\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m arr[j][\u001b[39m1\u001b[39;49m] \u001b[39m>\u001b[39;49m arr[j\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m][\u001b[39m1\u001b[39;49m]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=5'>6</a>\u001b[0m       arr[j], arr[j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m arr[j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], arr[j]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=6'>7</a>\u001b[0m       j\u001b[39m-\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15188\\1033557906.py:23\u001b[0m, in \u001b[0;36mtest1\u001b[1;34m(func)\u001b[0m\n\u001b[0;32m     20\u001b[0m     arr \u001b[39m=\u001b[39m [(\u001b[39mstr\u001b[39m(i), ratings[i]\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[0;32m     21\u001b[0m     \u001b[39mreturn\u001b[39;00m func(arr)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 23\u001b[0m test(test_cases, func, condition_func)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15188\\245556452.py:11\u001b[0m, in \u001b[0;36mtest\u001b[1;34m(cases, test_func, condition_func)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i, case \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(cases):\n\u001b[0;32m     10\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 11\u001b[0m         passed \u001b[39m=\u001b[39m condition_func(test_func, case)\n\u001b[0;32m     12\u001b[0m         \u001b[39mif\u001b[39;00m passed:\n\u001b[0;32m     13\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m- Test \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m PASSED.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15188\\1033557906.py:21\u001b[0m, in \u001b[0;36mtest1.<locals>.condition_func\u001b[1;34m(func, case)\u001b[0m\n\u001b[0;32m     19\u001b[0m ratings \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m11\u001b[39m, case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     20\u001b[0m arr \u001b[39m=\u001b[39m [(\u001b[39mstr\u001b[39m(i), ratings[i]\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[1;32m---> 21\u001b[0m \u001b[39mreturn\u001b[39;00m func(arr)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;32md:\\vanmindX\\CSI_09\\HDT-CSI04\\Labs\\Lab07\\Students\\truongvan_lab07\\truongvan_lab07.ipynb Cell 6\u001b[0m in \u001b[0;36mcounting_sort_rating\u001b[1;34m(arr)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=4'>5</a>\u001b[0m   \u001b[39mwhile\u001b[39;00m j\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m arr[j][\u001b[39m1\u001b[39m] \u001b[39m>\u001b[39m arr[j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m1\u001b[39m]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=5'>6</a>\u001b[0m       arr[j], arr[j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m arr[j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], arr[j]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=6'>7</a>\u001b[0m       j\u001b[39m-\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI_09/HDT-CSI04/Labs/Lab07/Students/truongvan_lab07/truongvan_lab07.ipynb#ch0000005?line=7'>8</a>\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -174,22 +174,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 2, 5, 8, 8, 9, 9, 10]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def count_third_largest(arr):\n",
     "    # không dùng count sort\n",
-    "    if len(set(arr)) <= 2: \n",
+    "    if len(set(arr)) < 3: \n",
     "        return 0\n",
+    "    max_val = max(arr)\n",
     "    for i in range(2):\n",
-    "        arr.remove(max(arr))\n",
-    "    return arr.count(max(arr))"
+    "        count_val = arr.count(max_val)\n",
+    "        for j in range(count_val):\n",
+    "            arr.remove(max(arr))\n",
+    "        max_val = max(arr)\n",
+    "    return arr.count(max(arr))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,9 +221,9 @@
       "- Test 6 PASSED.\n",
       "- Test 7 PASSED.\n",
       "- Test 8 PASSED.\n",
-      "- Test 9 FAILED: Wrong Answer.\n",
-      "- Test 10 FAILED: Wrong Answer.\n",
-      "Some test failed. Maybe check some code?\n"
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
      ]
     }
    ],
@@ -299,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,23 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 12, 'math': 10, 'literature': 4},\n",
-       " {'id': 324, 'math': 10, 'literature': 5},\n",
-       " {'id': 984, 'math': 9, 'literature': 5},\n",
-       " {'id': 223, 'math': 8, 'literature': 8},\n",
-       " {'id': 543, 'math': 8, 'literature': 5},\n",
-       " {'id': 890, 'math': 5, 'literature': 7}]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sort_student_grades_math(grade_list):\n",
     "    return sorted(grade_list, reverse = True, key = lambda grade_list: grade_list[\"math\"] )"
@@ -343,24 +343,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing on 8 cases.\n",
-      "- Test 1 PASSED.\n",
-      "- Test 2 PASSED.\n",
-      "- Test 3 PASSED.\n",
-      "- Test 4 PASSED.\n",
-      "- Test 5 PASSED.\n",
-      "- Test 6 PASSED.\n",
-      "- Test 7 PASSED.\n",
-      "- Test 8 PASSED.\n",
-      "CONGRATULATIONS! All test cases passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -437,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,25 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 324, 'math': 10, 'literature': 5},\n",
-       " {'id': 12, 'math': 10, 'literature': 4},\n",
-       " {'id': 984, 'math': 9, 'literature': 5},\n",
-       " {'id': 223, 'math': 8, 'literature': 8},\n",
-       " {'id': 543, 'math': 8, 'literature': 5},\n",
-       " {'id': 890, 'math': 5, 'literature': 7}]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sort_student_grades_all(grade_list):  # cách 1\n",
     "    temp = sorted(grade_list, reverse = True, key = lambda grade_list: grade_list[\"literature\"])\n",
@@ -484,26 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing on 8 cases.\n",
-      "- Test 1 PASSED.\n",
-      "- Test 2 PASSED.\n",
-      "- Test 3 PASSED.\n",
-      "- Test 4 PASSED.\n",
-      "- Test 5 PASSED.\n",
-      "- Test 6 PASSED.\n",
-      "- Test 7 PASSED.\n",
-      "- Test 8 PASSED.\n",
-      "CONGRATULATIONS! All test cases passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -520,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -534,11 +484,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
    }
   }
  },
