--- a/Homeworks/HW7/Students/truongvan_hw7/truongvan_hw7.ipynb
+++ b/Homeworks/HW7/Students/truongvan_hw7/truongvan_hw7.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,23 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Red Rose', 'price': 10000},\n",
-       " {'name': 'Chrysanthemum', 'price': 10000},\n",
-       " {'name': 'Lily', 'price': 12000},\n",
+       "[{'name': 'Chrysanthemum', 'price': 10000},\n",
+       " {'name': 'Red Rose', 'price': 10000},\n",
        " {'name': 'Daisy', 'price': 12000},\n",
-       " {'name': 'Blue Rose', 'price': 20000},\n",
-       " {'name': 'Tulip', 'price': 20000},\n",
+       " {'name': 'Lily', 'price': 12000},\n",
        " {'name': 'Sunflower', 'price': 20000},\n",
+       " {'name': 'Tulip', 'price': 20000},\n",
+       " {'name': 'Blue Rose', 'price': 20000},\n",
        " {'name': 'Orchid', 'price': 100000}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,13 +90,13 @@
     "        price = flower[\"price\"] // 1000\n",
     "        indices[price].append(i)\n",
     "    \n",
-    "    # traverse `count` to place the values into `sorted_arr`\n",
+    "    \n",
     "    sorted_arr = [None] * len(arr)\n",
-    "    index = 0\n",
-    "    for i in range(val_range):\n",
+    "    index = len(arr) -1\n",
+    "    for i in range(val_range-1, 0, -1):\n",
     "        for original_index in indices[i]:\n",
     "            sorted_arr[index] = arr[original_index]\n",
-    "            index += 1           \n",
+    "            index -= 1           \n",
     "    return sorted_arr\n",
     "\n",
     "arrange_flower_prices(flower_prices)"
@@ -105,7 +105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -119,11 +119,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
    }
   }
  },
