--- a/Test/Midterm/submissions/DangThanhVan-CSIMidtermTest.ipynb
+++ b/Test/Midterm/submissions/DangThanhVan-CSIMidtermTest.ipynb
@@ -430,7 +430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -444,11 +444,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
    }
   }
  },
