--- a/Test/Midterm/submissions/TranKhanhThanh-MidtermTest.ipynb
+++ b/Test/Midterm/submissions/TranKhanhThanh-MidtermTest.ipynb
@@ -92,8 +92,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -156,8 +156,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -224,16 +224,16 @@
       "cell_type": "code",
       "execution_count": 92,
       "metadata": {
-        "id": "XKmFOF4vnCr-",
-        "outputId": "b510d3bd-76ff-4473-ae4d-82c2e95d4eeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XKmFOF4vnCr-",
+        "outputId": "b510d3bd-76ff-4473-ae4d-82c2e95d4eeb"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -307,10 +307,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "arr = [2,5,3,1]\n",
-        "count_swap(arr)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -318,18 +315,21 @@
         "id": "UpEmepKAuDZm",
         "outputId": "1da84c47-2afa-4637-8fc6-1e395409c6bf"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
+          "execution_count": 57,
           "metadata": {},
-          "execution_count": 57
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "arr = [2,5,3,1]\n",
+        "count_swap(arr)"
       ]
     },
     {
@@ -344,8 +344,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -406,10 +406,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "string = \"The cat is chasing the rat. The dog is also chasing the rat.\"\n",
-        "find_word(2,string)"
-      ],
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -418,21 +415,24 @@
         "id": "1K_Y3Oz8z59x",
         "outputId": "673ec682-ea6c-43b8-af96-9d7e408bc30e"
       },
-      "execution_count": 85,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'is chasing rat'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'is chasing rat'"
+            ]
           },
+          "execution_count": 85,
           "metadata": {},
-          "execution_count": 85
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "string = \"The cat is chasing the rat. The dog is also chasing the rat.\"\n",
+        "find_word(2,string)"
       ]
     },
     {
@@ -447,8 +447,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -513,16 +513,16 @@
       "cell_type": "code",
       "execution_count": 87,
       "metadata": {
-        "id": "ggVb3ZZGnCsC",
-        "outputId": "01b4e4b2-7188-4bf7-9ce2-66675a68b1aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ggVb3ZZGnCsC",
+        "outputId": "01b4e4b2-7188-4bf7-9ce2-66675a68b1aa"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct answer on sample test!\n"
           ]
@@ -548,8 +548,12 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "TranKhanhThanh-MidtermTest.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 64-bit (windows store)",
       "language": "python",
       "name": "python3"
     },
@@ -563,11 +567,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.3"
+      "version": "3.10.4"
     },
-    "colab": {
-      "name": "TranKhanhThanh-MidtermTest.ipynb",
-      "provenance": []
+    "vscode": {
+      "interpreter": {
+        "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+      }
     }
   },
   "nbformat": 4,
