--- a/Contents/Bài 9. Stack và Queue.ipynb
+++ b/Contents/Bài 9. Stack và Queue.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,15 @@
     "    # init stack\n",
     "    stack = deque()\n",
     "    \n",
-    "    #### YOUR CODE HERE ####\n",
+    "    # traverse the sequence\n",
+    "    for par in sequence:\n",
+    "        if par == '(':  #  if open parenthesis: add to stack\n",
+    "            stack.append(par)\n",
+    "        else:           # if close parenthesis...\n",
+    "            if len(stack) > 0:  # if stack has open parenthesis to match => remove that open parenthesis\n",
+    "                stack.pop()\n",
+    "            else:               # if stack has no open parenthesis to match => invalid sequence\n",
+    "                return False\n",
     "    \n",
     "    # return True if stack has no open parenthesis left\n",
     "    return len(stack) == 0"
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +289,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -428,11 +436,52 @@
    "source": [
     "![](./assets/queue_ex.gif)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SOLUTION\n",
+    "class Barista:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.order_queue = deque()\n",
+    "        self.order_count = 0\n",
+    "    \n",
+    "    def set_coffee_machine(self, machine):\n",
+    "        self.machine = machine\n",
+    "    \n",
+    "    # take order from the customer\n",
+    "    def receive_order(self, drink):\n",
+    "        \n",
+    "        self.order_count += 1  # increase order ID\n",
+    "        \n",
+    "        # ask the machine to make the drink\n",
+    "        # if the machine is busy => add order to queue\n",
+    "        if not self.machine.receive_request((self.order_count, drink)):\n",
+    "            self.order_queue.append((self.order_count, drink))  # an order is a tuple of (id, drink)\n",
+    "            \n",
+    "        return self.order_count\n",
+    "    \n",
+    "    # get notified of the finished order from the machine\n",
+    "    def receive_drink(self, order):\n",
+    "        \n",
+    "        print(\"==> Order #{}: {} served.\".format(order[0], order[1]))\n",
+    "        \n",
+    "        # make the next drink in queue if exist\n",
+    "        if len(self.order_queue) > 0 and self.machine.receive_request(self.order_queue[0]):\n",
+    "            self.order_queue.popleft()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "245cc435fe8701059561108fec3fd7c748240250fa2e2b5e714b4f6827c3f344"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
