--- a/Labs/Lab09/Students/thanh/Lab 9. Stack và Queue.ipynb
+++ b/Labs/Lab09/Students/thanh/Lab 9. Stack và Queue.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,19 +46,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque      \n",
+    "        \n",
     "def reduce(sequence):\n",
-    "    pass"
+    "    queue = deque()\n",
+    "    for elm in sequence:\n",
+    "        queue.append(elm)\n",
+    "    \n",
+    "    if queue[0] == queue[1]:\n",
+    "        queue.popleft()\n",
+    "        queue.popleft()\n",
+    "    else:\n",
+    "        queue.append(queue.popleft())\n",
+    "\n",
+    "    return \"\".join(list(queue))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "An exception occured at test 1: deque index out of range.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 FAILED: Wrong Answer.\n",
+      "- Test 6 FAILED: Wrong Answer.\n",
+      "- Test 7 FAILED: Wrong Answer.\n",
+      "- Test 8 FAILED: Wrong Answer.\n",
+      "- Test 9 FAILED: Wrong Answer.\n",
+      "- Test 10 FAILED: Wrong Answer.\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -88,19 +119,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid(sequence):\n",
-    "    pass"
+    "    stack_1 = deque()\n",
+    "    stack_2 = deque()\n",
+    "    stack_3 = deque()\n",
+    "    for i in sequence:\n",
+    "        if i == \"(\":\n",
+    "            stack_1.append(i)\n",
+    "        elif i == \")\":\n",
+    "            if len(stack_1):\n",
+    "                stack_1.pop()\n",
+    "            else:\n",
+    "                return False\n",
+    "        elif i == \"[\":\n",
+    "            stack_2.append(i)\n",
+    "        elif i == \"]\":\n",
+    "            if len(stack_2):\n",
+    "                stack_2.pop()\n",
+    "            else:\n",
+    "                return False\n",
+    "        elif i == \"{\":\n",
+    "            stack_3.append(i)\n",
+    "        elif i == \"}\":\n",
+    "            if len(stack_3):\n",
+    "                stack_3.pop()\n",
+    "            else:\n",
+    "                return False\n",
+    "                \n",
+    "    if len(stack_1) or len(stack_2) or len(stack_3):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
