--- a/Contents/Bài 9. Stack và Queue.ipynb
+++ b/Contents/Bài 9. Stack và Queue.ipynb
@@ -477,11 +477,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "245cc435fe8701059561108fec3fd7c748240250fa2e2b5e714b4f6827c3f344"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +492,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+   }
   }
  },
  "nbformat": 4,
