--- a/Homeworks/HW9/Homework 9. Stack và Queue.ipynb
+++ b/Homeworks/HW9/Homework 9. Stack và Queue.ipynb
@@ -42,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +56,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+   }
   }
  },
  "nbformat": 4,
