--- a/Test/Midterm/submissions/TranMinhDuong-CSIMidtermTest.ipynb
+++ b/Test/Midterm/submissions/TranMinhDuong-CSIMidtermTest.ipynb
@@ -492,7 +492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -506,11 +506,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b2b9efa92f2bdac4bfda25c60f3f7d6c779c80601382838fe4225a699a59d380"
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
    }
   }
  },
