--- a/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb
+++ b/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,47 +55,7 @@
        "'01'"
       ]
      },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import deque\n",
-    "def reduce(sequence):\n",
-    "    if len(sequence) <= 1:\n",
-    "        return queue\n",
-    "    queue =  deque()\n",
-    "    for i in sequence:\n",
-    "        queue.append(i)\n",
-    "  \n",
-    "    while len(set(queue)) != len(queue):  # điều kiện dừng chưa hợp lí, ví dụ 101 \n",
-    "        if queue[0] == queue[1]:\n",
-    "            queue.popleft()\n",
-    "            queue.popleft()\n",
-    "        else:\n",
-    "           \n",
-    "            old = queue.popleft()\n",
-    "            queue.append(old)  # chỗ này đảo lộn thứ tự\n",
-    "    \n",
-    "    return \"\".join(list(queue))\n",
-    "\n",
-    "\n",
-    "reduce(\"10100001\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'01'"
-      ]
-     },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +69,8 @@
     "    newqueue = deque()\n",
     "    \n",
     "    #while (['0', '0'] in queue ) or (['1', '1'] in queue) :\n",
-    "    while len(set(queue)) != len(queue):  # sửa lại điều kiện này nưaz\n",
+    "    while len(set(queue)) != len(queue):  # điều kiện chưa đúng, ví dụ 101 là đáp án đúng nhưng set của nó khác độ dài nên vòng lặp\n",
+    "                                            #vẫn chạy ở đoạn 21 - 26, thành ra queue lại bị cắt\n",
     "        \n",
     "        if queue[0] == queue[1]:\n",
     "            queue.popleft()\n",
@@ -131,14 +92,85 @@
     "    return \"\".join(list(queue))\n",
     "\n",
     "\n",
-    "reduce(\"1000001\")"
+    "reduce(\"11\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  use list\n",
+    "from collections import deque\n",
+    "def reduce(sequence):\n",
+    "    if len(sequence) <= 1 or sequence == None:\n",
+    "        return \n",
+    "    sequence= [i for i in sequence]\n",
+    "    for i in range(0, len(sequence)):\n",
+    "        j=0\n",
+    "        while j< len(sequence)-1:\n",
+    "\n",
+    "            if sequence[j] == sequence[j+1]:\n",
+    "                sequence.pop(j)\n",
+    "                sequence.pop(j)\n",
+    "                \n",
+    "                \n",
+    "            j+=1\n",
+    "            \n",
+    "    return \"\".join(sequence)\n",
+    "\n",
+    "reduce(\"10011\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "An exception occured at test 1: object of type 'NoneType' has no len().\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32md:\\vanmindX\\CSI04\\HDT-CSI04\\Labs\\Lab09\\Students\\truongvan_lab09\\truongvan_lab09.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test1(reduce)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9696\\1915271161.py:22\u001b[0m, in \u001b[0;36mtest1\u001b[1;34m(func)\u001b[0m\n\u001b[0;32m     19\u001b[0m     arr \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39mstr\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m     20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39m(func(arr)) \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 22\u001b[0m test(test_cases, func, condition_func)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9696\\245556452.py:11\u001b[0m, in \u001b[0;36mtest\u001b[1;34m(cases, test_func, condition_func)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i, case \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(cases):\n\u001b[0;32m     10\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 11\u001b[0m         passed \u001b[39m=\u001b[39m condition_func(test_func, case)\n\u001b[0;32m     12\u001b[0m         \u001b[39mif\u001b[39;00m passed:\n\u001b[0;32m     13\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m- Test \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m PASSED.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9696\\1915271161.py:20\u001b[0m, in \u001b[0;36mtest1.<locals>.condition_func\u001b[1;34m(func, case)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcondition_func\u001b[39m(func, case):\n\u001b[0;32m     19\u001b[0m     arr \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, case[\u001b[39m'\u001b[39m\u001b[39minp\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39mstr\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m---> 20\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39m(func(arr)) \u001b[39m==\u001b[39m case[\u001b[39m'\u001b[39m\u001b[39mout\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;32md:\\vanmindX\\CSI04\\HDT-CSI04\\Labs\\Lab09\\Students\\truongvan_lab09\\truongvan_lab09.ipynb Cell 6\u001b[0m in \u001b[0;36mreduce\u001b[1;34m(sequence)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         \u001b[39mif\u001b[39;00m sequence[j] \u001b[39m==\u001b[39m sequence[j\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m             sequence\u001b[39m.\u001b[39mpop(j)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m             sequence\u001b[39m.\u001b[39;49mpop(j)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         j\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/vanmindX/CSI04/HDT-CSI04/Labs/Lab09/Students/truongvan_lab09/truongvan_lab09.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(sequence)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "test1(reduce)"
    ]
@@ -269,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +317,11 @@
     "            stack.append(int(inf[i]))\n",
     "           \n",
     "        else:\n",
-    "            val = eval(f'{stack[-2]} {inf[i]} {stack[-1]}')\n",
+    "            if inf[i] == \"^\":\n",
+    "                op = '**'\n",
+    "            else: \n",
+    "                op = inf[i]\n",
+    "            val = eval(f'{stack[-2]} {op} {stack[-1]}')\n",
     "            stack.pop()\n",
     "            stack.pop()\n",
     "            stack.append(val)\n",
@@ -294,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -306,11 +342,11 @@
       "- Test 2 PASSED.\n",
       "- Test 3 PASSED.\n",
       "- Test 4 PASSED.\n",
-      "- Test 5 FAILED: Wrong Answer.\n",
+      "- Test 5 PASSED.\n",
       "- Test 6 PASSED.\n",
       "- Test 7 PASSED.\n",
       "- Test 8 PASSED.\n",
-      "Some test failed. Maybe check some code?\n"
+      "CONGRATULATIONS! All test cases passed!\n"
      ]
     }
    ],
@@ -369,32 +405,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
+    "\n",
+    "def priority(x):\n",
+    "    if x == \"^\":\n",
+    "        return 4\n",
+    "    if x == \"*\" or x == \"/\":\n",
+    "        return 3\n",
+    "    if x == \"+\" or x == \"-\":\n",
+    "        return 2\n",
+    "    if x == \"(\":\n",
+    "        return 1\n",
+    "    if x== \")\":\n",
+    "        return 0\n",
+    "def eval_postfix(inf):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    stack=deque()\n",
+    "    for i in range(len(inf)):\n",
+    "        if inf[i].isnumeric():\n",
+    "            stack.append(int(inf[i]))\n",
+    "           \n",
+    "        else:\n",
+    "            if inf[i] == \"^\":\n",
+    "                op = \"**\"\n",
+    "            else:\n",
+    "                op = inf[i]\n",
+    "            val = eval(f'{stack[-2]} {op} {stack[-1]}')\n",
+    "            stack.pop()\n",
+    "            stack.pop()\n",
+    "            stack.append(val)\n",
+    "    return stack[-1]\n",
+    "\n",
     "def infix_to_postfix_evaluate(infix):\n",
-    "    infix = infix.split(' ')\n",
-    "    so = []\n",
-    "    dau = []\n",
+    "    infix = infix.split(\" \")\n",
+    "    postfix = []\n",
+    "    stack = deque()\n",
     "    for i in range(len(infix)):\n",
-    "        # # if i.isnumeric():\n",
-    "        # #     continue\n",
-    "        # # elif infix[i] in ['+', '-', '*', '/', '^']:\n",
-    "        # if i < len(infix) - 1:\n",
-    "        #     if infix[i+1] != ('(' or ')'):\n",
-    "        #         if infix[i] in ['+', '-', '*', '/', '^']:\n",
-    "        #             infix[i], infix[i+1] = infix[i+1], infix[i]\n",
-    "        #     else:\n",
-    "                \n",
     "        if infix[i].isnumeric():\n",
-    "            so.append(infix[i])\n",
+    "            postfix.append(infix[i])\n",
+    "        else:\n",
+    "            if not stack:\n",
+    "                stack.append(infix[i])\n",
+    "            else:\n",
+    "        \n",
+    "                if priority(stack[-1]) >= priority(infix[i]) and infix[i] not in  [\"(\", \")\"]:\n",
+    "                    new_post = stack.pop()\n",
+    "                    postfix.append(new_post)    \n",
+    "                    stack.append(infix[i])\n",
+    "                elif infix[i] == \")\":\n",
+    "                    while stack[-1] != \"(\":\n",
+    "                        postfix.append(stack[-1])\n",
+    "                        stack.pop()\n",
+    "                    stack.pop()    \n",
+    "                else:\n",
+    "                    stack.append(infix[i])\n",
+    "    while stack:\n",
+    "        postfix.append(stack[-1])\n",
+    "        stack.pop()\n",
+    "   \n",
+    "    return \" \".join(postfix), eval_postfix(postfix)\n",
+    "                    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,15 +485,15 @@
      "output_type": "stream",
      "text": [
       "Testing on 8 cases.\n",
-      "An exception occured at test 1: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 2: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 3: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 4: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 5: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 6: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 7: 'NoneType' object is not subscriptable.\n",
-      "An exception occured at test 8: 'NoneType' object is not subscriptable.\n",
-      "Some test failed. Maybe check some code?\n"
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
      ]
     }
    ],
@@ -430,7 +513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -444,11 +527,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
    }
   }
  },
