--- a/Homeworks/HW10/Students/thanh.ipynb
+++ b/Homeworks/HW10/Students/thanh.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,52 @@
     "root.left.right.left, root.left.right.right = BSTNode(4), BSTNode(7)\n",
     "root.right.right = BSTNode(14)\n",
     "root.right.right.left = BSTNode(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "10\n",
+      "13\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insert(node, data):\n",
+    "    if node is None:\n",
+    "        return (BSTNode(data))\n",
+    "    else:\n",
+    "        if data <= node.data:\n",
+    "            node.left = insert(node.left, data)\n",
+    "        else:\n",
+    "            node.right = insert(node.right, data)\n",
+    "        return node\n",
+    "def minValue(node):\n",
+    "    current = node\n",
+    "    while(current.left is not None):\n",
+    "        current = current.left\n",
+    "    return current.data\n",
+    "\n",
+    "def inorder(root):\n",
+    "    if root:\n",
+    "        inorder(root.left)\n",
+    "        print(root.data)\n",
+    "        inorder(root.right)\n",
+    "\n",
+    "inorder(root)"
    ]
   }
  ],
